[I-Build-Tests] Clean-up and unify test launch scripts and ant setup
- Use curl instead of wget (the former seems to be available on more
machines by default)
- Remove unnecessary time measurements and whitespace in print-out
- Unify variable definition and created environment files
- Unify consideration of ANT_OPTS environment variable
- Remove secondary tee-ing of console print-out in Linux logs to not
defined path variable ${consolelogs}